[package]
name = "widgets"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0-dev", features = [
    "tokio",
    "lazy",
    "advanced",
    "debug",
    "canvas",
] }
uuid = { version = "1.6", features = ["v4", "serde"] }

[patch.crates-io]
iced = { git = "https://github.com/iced-rs/iced", branch = "master" }

[[example]]
name = "tree_example"
path = "examples\\tree_example.rs"

[[example]]
name = "tree_example_advanced"
path = "examples\\tree_example_advanced.rs"

[[example]]
name = "color_picker_example"
path = "examples\\color_picker_example.rs"