[package]
name = "widgets"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = [
    "tokio",
    "lazy",
    "advanced",
    "debug",
    "canvas",
] }
uuid = { version = "1.6", features = ["v4", "serde"] }

[[example]]
name = "tree_example"
path = "examples\\tree_example.rs"

[[example]]
name = "tree_in_collapsible"
path = "examples\\tree_in_collapsible_example.rs"

[[example]]
name = "color_picker_example"
path = "examples\\color_picker_example.rs"

[[example]]
name = "collapsible_example"
path = "examples\\collapsible_example.rs"

[[example]]
name = "generic_overlay_example"
path = "examples\\generic_overlay_example.rs"